--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
         .card.disabled { opacity: 0.5; filter: grayscale(1); }
         #mini-card-area { background: rgba(0,0,0,0.2); border-radius: 10px; padding: 10px 8px; margin-top: auto; border: 1px solid #5c5042; }
         .mini-card-wrap { display: flex; flex-wrap: wrap; justify-content: center; gap: 6px; }
-        
-        /* 미니카드 디자인 보완 */
         .mini-card { width: 22%; height: 75px; background: #5c5042; color: #e0d0b8; border-radius: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; cursor: pointer; border: 1px solid #3d342b; }
         .mini-card b { font-size: 14px; margin-top: 2px; }
         .mini-card span { font-size: 10px; margin: 3px 0; }
         .mini-card .count-txt { font-size: 9px; color: #aaa; }
         .mini-card.sold-out { background: #1a1a1a; color: #555; opacity: 0.6; }
-
         .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); flex-direction: column; justify-content: center; align-items: center; z-index: 100; }
         .overlay-btn { padding: 15px; margin: 5px; width: 85%; max-width: 250px; background: #4a4036; color: white; border: 1px solid #8c7b6c; border-radius: 5px; font-size: 18px; }
         #notice-box { background: #f5f0e1; color: #2e2b26; padding: 25px; border-radius: 10px; width: 80%; max-width: 300px; border: 5px solid #a63737; }
@@ -42,7 +39,7 @@
         <div id="top-bar">
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <span id="room-info-display" style="font-size: 14px;">인원: <span id="player-count">0</span>/4</span>
-                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; border-radius:5px; padding:8px 15px; font-weight:bold; cursor:pointer;">▶ 시작하기</button>
+                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; border-radius:5px; padding:8px 15px; font-weight:bold;">▶ 시작하기</button>
             </div>
             <div id="player-names-box" style="font-size:12px; margin-top:5px; text-align:left; color:#9c8e7e;"></div>
         </div>
@@ -53,7 +50,7 @@
             <div class="card disabled" id="card1" onclick="clickCard(1)"></div>
         </div>
         <div id="mini-card-area">
-            <div style="font-size:11px; color:#e6b322; margin-bottom:8px;">📋 남은 카드 (클릭 시 능력 확인)</div>
+            <div id="deck-status" style="font-size:11px; color:#e6b322; margin-bottom:8px;">📋 남은 덱: -장</div>
             <div id="mini-card-container" class="mini-card-wrap"></div>
         </div>
     </div>
@@ -108,8 +105,7 @@
         }
 
         function requestStart() {
-            const btn = document.getElementById('start-btn');
-            btn.style.display = 'none'; // 클릭 시 숨김
+            document.getElementById('start-btn').style.display = 'none';
             socket.emit('requestStart');
         }
 
@@ -177,7 +173,6 @@
             } else { submitPlay(); }
         }
 
-        let selectedTarget = "";
         function selectTarget(name) {
             selectedTarget = name;
             document.getElementById('target-overlay').style.display = 'none';
@@ -188,7 +183,9 @@
         function submitPlay(guess = "") { socket.emit('playCard', { card: selectedCard, target: selectedTarget, guess: guess }); closeOverlay(); }
         function closeOverlay() { document.querySelectorAll('.overlay').forEach(o => { if(o.id !== 'notice-overlay') o.style.display = 'none'; }); }
 
-        socket.on('updateCardStats', (stats) => {
+        socket.on('updateCardStats', (data) => {
+            const { stats, deckCount } = data;
+            document.getElementById('deck-status').innerText = `📋 남은 덱: ${deckCount}장 (클릭 시 능력 확인)`;
             document.getElementById('mini-card-container').innerHTML = stats.map(s => {
                 const isSoldOut = s.remaining === 0 ? "sold-out" : "";
                 return `
