--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div id="login-screen">
-        <div style="font-size: 80px; margin-bottom: 10px;">👸</div>
+        <div style="font-size: 80px; margin-bottom: 10px; text-align: center;">👸</div>
         <h1 style="color: #e6b322; font-size: 45px; font-family: 'Gungsuh'; margin-bottom: 5px; margin-top: 0;">중전구출</h1>
         <div style="font-size: 22.5px; color: #888; margin-bottom: 30px;">(원작.러브레터)</div>
         <input type="text" id="nickname" placeholder="이름을 입력하시오" />
